# analysis_pipeline_plugin_example

./: CMakeLists.txt  README.md
include/: LinkDef.h
include/analysis_pipeline/example_plugin/stages/examples/: constant_value_stage.h
include/stages/examples/: constant_value_stage.h
src/analysis_pipeline/example_plugin/stages/examples/: constant_value_stage.cpp
src/stages/examples/: constant_value_stage.cpp
